--- a/apps/streamer/.gitignore
+++ b/apps/streamer/.gitignore
@@ -19,3 +19,6 @@ erl_crash.dump
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
+# Ignore package tarball (built via "mix hex.build").
+streamer-*.tar
+
